RESOLVED FIXED167874
Resource usage overlay should ignore mouse events outside bounds by default
https://bugs.webkit.org/show_bug.cgi?id=167874
Summary Resource usage overlay should ignore mouse events outside bounds by default
Carlos Garcia Campos
Reported 2017-02-06 05:19:31 PST
It's overriding the default causing that the first click after the overlay is shown is always handled by the overlay even when clicked outside bounds. It should only be set false while dragging.
Attachments
Patch (1.42 KB, patch)
2017-02-06 05:20 PST, Carlos Garcia Campos
kling: review+
Carlos Garcia Campos
Comment 1 2017-02-06 05:20:49 PST
Carlos Garcia Campos
Comment 2 2017-02-06 09:51:11 PST
Note You need to log in before you can comment on or make changes to this bug.