Resource usage overlay should ignore mouse events outside bounds by default https://bugs.webkit.org/show_bug.cgi?id=167874

Reviewed by Andreas Kling.

It's overriding the default causing that the first click after the overlay is shown is always handled by the
overlay even when clicked outside bounds. It should only be set false while dragging.

* page/ResourceUsageOverlay.cpp:
(WebCore::ResourceUsageOverlay::initialize):

Canonical link: https://commits.webkit.org/184909@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@211733 268f45cc-cd09-0410-ab3c-d52691b4dbfc